frontend/tests/cases/positive/extensions.gr
language base

foo : Int
foo = 42