frontend/tests/cases/negative/bogus-import.gr
import bogus

foo : Int
foo = 0
